--- a/index.html
+++ b/index.html
@@ -211,3 +211,5 @@
   <script src="assets/js/app.js"></script>
 </body>
 </html>
+<link rel="stylesheet" href="assets/css/styles.css" />
+<script src="assets/js/app.js"></script>
